# palautusrepositorio

./: README.md
Viikko1/nhl-statistics-1/: .coverage
Viikko1/nhl-statistics-1/src/: index.py  statistics_service.py
Viikko1/nhl-statistics-1/src/tests/: StatisticsService_test.py
Viikko3/hello-robot/: log.html  output.xml  report.html
Viikko3/login-robot/: log.html  output.xml  report.html
Viikko3/login-robot/src/services/: user_service.py
Viikko3/login-robot/src/tests/: login.robot  register.robot
Viikko3/web-login/: log.html  output.xml  report.html
Viikko3/web-login/src/services/: user_service.py
Viikko3/web-login/src/tests/: login.robot  login_resource.robot  register.robot  resource.robot
Viikko4/: retro.md
Viikko4/maksukortti-mock/src/: kassapaate.py
Viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
Viikko4/verkkokauppa/: .coverage
Viikko5/int-joukko/src/: int_joukko.py
Viikko5/laskin/src/: kayttoliittyma.py
Viikko5/tennis/src/: score.py  tennis_game.py
Viikko6/query-language/src/: index.py  matchers.py  query_builder.py
Viikko7/kivi-paperi-sakset/: MERGE.md
Viikko7/kivi-paperi-sakset/src/: index.py  kivi_sakset_paperi.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  peli.py
viikko2/nhl-reader/: palautusrepositorio.code-workspace
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/: palautusrepositorio.code-workspace
viikko2/project-reader/src/: project.py  project_reader.py
(+1 files in other folders)
