[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["CoolMcRad <santtu-12@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10\n"
cowsay = "^6.1"


[tool.poetry.group.dev.dependencies]
flask = "^3.0.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
